--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Lato", sans-serif;
+  overflow-x: hidden;
 }
 
 header {
@@ -289,7 +290,7 @@ footer {
   }
 
   #lower-nav li:first-child > img {
-    width: 130px;
+    width: 100px;
   }
 
   #upper-nav li:last-child,
@@ -410,6 +411,7 @@ footer {
 
   .course-item-description {
     width: 65%;
+    font-size: 14px;
   }
 
   .hide-on-mobile {
